--- a/assets/css/pages.css
+++ b/assets/css/pages.css
@@ -80550,3 +80550,170 @@ button[data-testid='cypress-headernav-profile']:focus + .c3i7glo[class][class] {
 ._1gglzn7 {
   margin-bottom: 16px !important;
 }
+
+/* style tag */
+
+._c5rhl5 {
+  width: 100% !important;
+  border: none !important;
+  outline: none !important;
+  padding: 0px !important;
+  margin: 26px 12px 6px !important;
+  min-height: 1px !important;
+  color: inherit !important;
+  background-color: transparent !important;
+  font-family: inherit !important;
+  font-size: inherit !important;
+  font-weight: inherit !important;
+  line-height: inherit !important;
+  appearance: none !important;
+  box-shadow: none !important;
+}
+
+._3rjack {
+  display: inline-block !important;
+  margin-right: 24px !important;
+  vertical-align: middle !important;
+}
+
+._1q1vg1w {
+  animation-fill-mode: both !important;
+  animation-delay: 0.2s !important;
+  animation-duration: 0.3s !important;
+  animation-iteration-count: 1 !important;
+  animation-timing-function: ease-in-out !important;
+  animation-name: keyframe_18jn58a !important;
+}
+
+._6tbg2q {
+  height: 100% !important;
+  width: 100% !important;
+}
+
+._1emsdka {
+  height: 100% !important;
+  position: relative !important;
+  width: 100% !important;
+}
+
+._1yydbd74 {
+  cursor: pointer !important;
+  position: relative !important;
+  touch-action: manipulation !important;
+  font-family: inherit !important;
+  font-size: inherit !important;
+  line-height: inherit !important;
+  font-weight: inherit !important;
+  border-radius: 8px !important;
+  outline: none !important;
+  transition: box-shadow 0.2s ease 0s, -ms-transform 0.1s ease 0s,
+    -webkit-transform 0.1s ease 0s, transform 0.1s ease 0s !important;
+  -webkit-tap-highlight-color: transparent !important;
+  background: transparent !important;
+  border: none !important;
+  color: inherit !important;
+  display: block !important;
+  margin: 0px !important;
+  padding: 0px !important;
+  text-align: inherit !important;
+  text-decoration: none !important;
+  height: 100% !important;
+  width: 100% !important;
+}
+
+._11g6x33:hover::after {
+  opacity: 1 !important;
+}
+
+._1f22edh {
+  box-shadow: rgb(0 0 0 / 10%) 0px 1px 0px !important;
+  background-color: rgb(255, 255, 255) !important;
+  position: fixed !important;
+  left: 0px !important;
+  right: 0px !important;
+  top: 0px !important;
+  z-index: 3 !important;
+  width: calc(100% - var(--scrollbar-gutter, 0%)) !important;
+  animation-name: keyframe_1b8bzh6 !important;
+  animation-duration: 100ms !important;
+  -webkit-box-lines: multiple !important;
+}
+
+._le6wlg {
+  -webkit-box-pack: start !important;
+  -ms-flex-pack: start !important;
+  -webkit-box-align: stretch !important;
+  -ms-flex-align: stretch !important;
+  display: -webkit-box !important;
+  display: -moz-box !important;
+  display: -ms-flexbox !important;
+  display: -webkit-flex !important;
+  display: flex !important;
+  -webkit-align-items: stretch !important;
+  align-items: stretch !important;
+  -webkit-justify-content: flex-start !important;
+  justify-content: flex-start !important;
+  -webkit-flex-wrap: wrap !important;
+  -ms-flex-wrap: wrap !important;
+  flex-wrap: wrap !important;
+  width: 100% !important;
+  padding-left: var(--gp-padding-xsmallAndAbove, 24px) !important;
+  padding-right: var(--gp-padding-xsmallAndAbove, 24px) !important;
+  margin-left: 0px !important;
+  margin-right: 0px !important;
+}
+
+._3rjack {
+  display: inline-block !important;
+  margin-right: 24px !important;
+  vertical-align: middle !important;
+}
+
+._cwu2wau {
+  -webkit-box-align: center !important;
+  display: flex !important;
+  align-items: center !important;
+  width: 100% !important;
+  margin-top: 16px !important;
+  margin-bottom: 16px !important;
+}
+
+._vzrbjl {
+  display: flex !important;
+  flex-flow: column wrap !important;
+  flex: 0 1 100% !important;
+}
+
+._7blh7hl {
+  color: rgb(34, 34, 34) !important;
+  font-family: Circular, -apple-system, BlinkMacSystemFont, Roboto,
+    'Helvetica Neue', sans-serif !important;
+  font-weight: 600 !important;
+  font-size: 18px !important;
+  line-height: 22px !important;
+  margin-bottom: 32px !important;
+}
+
+.btn-share-desktop {
+  appearance: none !important;
+  display: inline-block !important;
+  border-radius: 50% !important;
+  border: none !important;
+  outline: none !important;
+  margin: 0px !important;
+  padding: 0px !important;
+  color: rgb(34, 34, 34) !important;
+  cursor: pointer !important;
+  touch-action: manipulation !important;
+  position: relative !important;
+  background: transparent !important;
+  transition: -ms-transform 0.25s ease 0s, -webkit-transform 0.25s ease 0s,
+    transform 0.25s ease 0s !important;
+}
+._652db9 {
+  font-size: 16px !important;
+  line-height: 20px !important;
+  color: rgb(34, 34, 34) !important;
+  font-weight: 600 !important;
+  margin-bottom: 4px !important;
+}
