--- a/assets/css/global.css
+++ b/assets/css/global.css
@@ -4327,7 +4327,7 @@ html :where(img[class*='wp-image-']) {
   white-space: nowrap !important;
   width: 1px !important;
 }
-.vh-100 {
+.wh-full {
   height: 100% !important;
   width: 100% !important;
 }
