--- a/assets/css/pages.css
+++ b/assets/css/pages.css
@@ -35619,7 +35619,7 @@ a:hover {
   text-align: start !important;
   text-align-last: start !important;
 }
-.contact-host__textarea-container {
+.mt-2 {
   margin-top: 8px !important;
 }
 .contact-host__textarea-wrapper {
