--- a/assets/css/pages.css
+++ b/assets/css/pages.css
@@ -13618,7 +13618,7 @@
   margin-top: 24px !important;
   font-size: 18px !important;
 }
-.color_black {
+.text-dark {
   color: #222 !important;
 }
 .payout-methods__header-h1 {
