--- a/assets/css/pages.css
+++ b/assets/css/pages.css
@@ -69102,7 +69102,7 @@ button[data-testid='cypress-headernav-profile']:focus + .c3i7glo[class][class] {
   margin-bottom: 8px !important;
 }
 
-._in41ap1 {
+.mb-2 {
   margin-bottom: 8px !important;
 }
 
