--- a/assets/css/pages.css
+++ b/assets/css/pages.css
@@ -80152,3 +80152,18 @@ label {
   vertical-align: middle !important;
   margin-right: 0 !important;
 }
+
+._1mb2uol {
+  color: #222 !important;
+  margin: auto auto 96px;
+  padding-left: 16px !important;
+  padding-right: 16px !important;
+  margin-top: 48px !important;
+  max-width: 1064px !important;
+}
+
+@media (min-width: 744px) {
+  ._1mb2uol {
+    margin-bottom: 32px;
+  }
+}
