fix calendar-section__day-header-btn revert removed style

--- a/assets/css/pages.css
+++ b/assets/css/pages.css
@@ -80157,3 +80157,9 @@ label {
     margin-bottom: 32px;
   }
 }
+.calendar-section__day-header-btn {
+  background: #fff !important;
+  border: none !important;
+  height: 100% !important;
+  width: 100% !important;
+}
