--- a/assets/css/pages.css
+++ b/assets/css/pages.css
@@ -77305,7 +77305,7 @@ button[data-testid='cypress-headernav-profile']:focus + .c3i7glo[class][class] {
     box-shadow: rgb(221 221 221) 0px 0px 0px 1px !important;
   }
 }
-._11si3k3 {
+.header__flexible-tab {
   padding-top: 22px !important;
 }
 ._1il0ryh {
