header__flexible-lengths

--- a/assets/css/pages.css
+++ b/assets/css/pages.css
@@ -77308,7 +77308,7 @@ button[data-testid='cypress-headernav-profile']:focus + .c3i7glo[class][class] {
 .header__flexible-tab {
   padding-top: 22px !important;
 }
-._1il0ryh {
+.header__flexible-lengths {
   -webkit-box-pack: center !important;
   -webkit-box-direction: normal !important;
   -webkit-box-orient: vertical !important;
@@ -77321,7 +77321,7 @@ button[data-testid='cypress-headernav-profile']:focus + .c3i7glo[class][class] {
   justify-content: center !important;
 }
 @media only screen and (min-width: 880px) {
-  ._1il0ryh {
+  .header__flexible-lengths {
     min-width: 800px !important;
   }
 }
