--- a/assets/css/pages.css
+++ b/assets/css/pages.css
@@ -77325,7 +77325,7 @@ button[data-testid='cypress-headernav-profile']:focus + .c3i7glo[class][class] {
     min-width: 800px !important;
   }
 }
-.header__flexible-selected {
+.header__flexible-title {
   font-size: 18px !important;
   line-height: 24px !important;
   font-weight: 600 !important;
