add padding-right in hidden-vscroll

--- a/assets/css/global.css
+++ b/assets/css/global.css
@@ -4152,7 +4152,8 @@ html :where(img[class*='wp-image-']) {
   display: none !important;
 }
 .hidden-vscroll {
-  overflow-y: hidden;
+  overflow: hidden;
+  padding-right: 15px;
 }
 .overflow-y-hidden {
   overflow-y: hidden;
