--- a/assets/css/global.css
+++ b/assets/css/global.css
@@ -19500,7 +19500,7 @@ input[type='button'].btn-block {
   inset: 0 !important;
   max-height: calc(var(--vh, 1vh) * 100) !important;
   padding-top: calc(12px + env(safe-area-inset-top, 0)) !important;
-  display: flex !important;
+  display: flex;
   flex-direction: row !important;
   align-items: flex-end !important;
   justify-content: center !important;
