Revert "fix bug"
This reverts commit 83c7a999dbb12d1ee8be5f0a9e307abac1620016.

--- a/assets/css/global.css
+++ b/assets/css/global.css
@@ -4335,7 +4335,7 @@ html :where(img[class*='wp-image-']) {
   width: 1px !important;
 }
 .wh-full {
-  /* height: 100% !important; */
+  height: 100% !important;
   width: 100% !important;
 }
 .max-w-full {
