Rename new components calendar-dropdown, modal

--- a/assets/css/pages.css
+++ b/assets/css/pages.css
@@ -18143,7 +18143,7 @@ ul {
   background: #fff !important;
   border: 1px solid #ddd !important;
 }
-._uxnsba {
+.calendar-dropdown__subtitle {
   line-height: 18px !important;
   overflow: hidden !important;
   text-overflow: ellipsis !important;
@@ -18153,7 +18153,7 @@ ul {
   height: 36px !important;
 }
 @supports (overflow: clip) {
-  ._uxnsba {
+  .calendar-dropdown__subtitle {
     overflow: clip !important;
   }
 }
@@ -19040,7 +19040,7 @@ ul {
 ._1fpuhdl:first-child {
   padding-top: 0 !important;
 }
-._18x3iiu {
+.calendar-dropdown__title-wrapper {
   order: 1 !important;
 }
 ._m6lwl6 {
@@ -39950,7 +39950,7 @@ video::cue {
   align-self: flex-start !important;
   margin-top: 24px !important;
 }
-.t5p7tdn[class][class] {
+.calendar-dropdown__title[class][class] {
   color: var(--gray-900);
   font-family: var(--font-family);
   font-weight: var(--font-weight-semibold);
@@ -54186,7 +54186,7 @@ button[data-testid='cypress-headernav-profile']:focus + .c3i7glo[class][class] {
   position: relative;
   pointer-events: none;
 }
-._8c85wg {
+.modal__snackbar {
   position: absolute !important;
   bottom: 16px !important;
   left: 50% !important;
@@ -59407,7 +59407,7 @@ button[data-testid='cypress-headernav-profile']:focus + .c3i7glo[class][class] {
   .header-filter__label[class][class]::after {
   opacity: 1;
 }
-._13ah4vr {
+.calendar-dropdown {
   background: #fff !important;
   border-radius: 16px !important;
   box-shadow: rgb(0 0 0 / 20%) 0 6px 20px !important;
@@ -59420,7 +59420,7 @@ button[data-testid='cypress-headernav-profile']:focus + .c3i7glo[class][class] {
   z-index: 1 !important;
   min-height: 460px !important;
 }
-._1aa8ytq {
+.calendar-dropdown__header {
   -webkit-box-align: start !important;
   -webkit-box-pack: justify !important;
   display: flex !important;
@@ -59428,7 +59428,7 @@ button[data-testid='cypress-headernav-profile']:focus + .c3i7glo[class][class] {
   align-items: flex-start !important;
   padding-bottom: 16px !important;
 }
-._enjuap {
+.calendar-dropdown__inputs-wrapper {
   -webkit-box-flex: 0 !important;
   order: 2 !important;
   flex: 0 0 calc(((100vw - 256px) / 12) * 5 + 16px) !important;
@@ -59437,27 +59437,27 @@ button[data-testid='cypress-headernav-profile']:focus + .c3i7glo[class][class] {
   display: block !important;
 }
 @media (min-width: 950px) {
-  ._enjuap {
+  .calendar-dropdown__inputs-wrapper {
     flex-basis: calc(((100vw - 256px) / 12) * 4 + 0px) !important;
   }
 }
 @media (min-width: 1128px) {
-  ._enjuap {
+  .calendar-dropdown__inputs-wrapper {
     flex-basis: calc(((100vw - 336px) / 12) * 4 + 0px) !important;
   }
 }
 @media (min-width: 1440px) {
-  ._enjuap {
+  .calendar-dropdown__inputs-wrapper {
     flex-basis: 315px !important;
   }
 }
-._h0i9fjw {
+.calendar-dropdown__inputs {
   display: flex !important;
   border-radius: 8px !important;
   background-color: #f7f7f7 !important;
   box-shadow: rgb(176 176 176) 0 0 0 1px inset !important;
 }
-._q3k8d9z {
+.calendar-dropdown__input-active {
   position: relative !important;
   cursor: text !important;
   display: flex !important;
@@ -59477,7 +59477,7 @@ button[data-testid='cypress-headernav-profile']:focus + .c3i7glo[class][class] {
   box-shadow: rgb(34 34 34) 0 0 0 2px inset !important;
   background-color: #fff !important;
 }
-._7eq2v2 {
+.calendar-dropdown__label-title-active {
   position: absolute !important;
   top: 12px !important;
   left: 12px !important;
@@ -59495,14 +59495,14 @@ button[data-testid='cypress-headernav-profile']:focus + .c3i7glo[class][class] {
   text-overflow: ellipsis !important;
   white-space: nowrap !important;
 }
-._1rhk4n5 {
+.calendar-dropdown__input-text-active {
   display: flex !important;
   opacity: 1 !important;
   font-size: 14px !important;
   line-height: 18px !important;
   color: #222 !important;
 }
-._1u110jjk {
+.calendar-dropdown__input {
   position: relative !important;
   display: flex !important;
   min-height: 56px !important;
@@ -59523,7 +59523,7 @@ button[data-testid='cypress-headernav-profile']:focus + .c3i7glo[class][class] {
   color: #ddd !important;
   -webkit-text-fill-color: rgb(221, 221, 221) !important;
 }
-._psorrpd {
+.calendar-dropdown__label-title {
   position: absolute !important;
   top: 12px !important;
   left: 12px !important;
@@ -59541,7 +59541,7 @@ button[data-testid='cypress-headernav-profile']:focus + .c3i7glo[class][class] {
   white-space: nowrap !important;
   color: #717171 !important;
 }
-._7usg0nt {
+.calendar-dropdown__input-text {
   display: flex !important;
   opacity: 1 !important;
   font-size: 14px !important;
@@ -61460,7 +61460,7 @@ button[data-testid='cypress-headernav-profile']:focus + .c3i7glo[class][class] {
   margin-bottom: 12px !important;
   padding: 0 24px 250px !important;
 }
-._1yw7hpv {
+.calendar-dropdown__label {
   position: relative !important;
   -webkit-flex: 1 !important;
   -ms-flex: 1 1 0% !important;
@@ -63003,7 +63003,7 @@ button[data-testid='cypress-headernav-profile']:focus + .c3i7glo[class][class] {
   margin-right: 8px !important;
   padding: 0 !important;
 }
-._1yw7hpv {
+.calendar-dropdown__label {
   position: relative !important;
   flex: 1 1 0% !important;
   padding: 0 !important;
