Rename new components hero, heading

--- a/assets/css/pages.css
+++ b/assets/css/pages.css
@@ -53902,32 +53902,32 @@ button[data-testid='cypress-headernav-profile']:focus + .c3i7glo[class][class] {
   position: relative !important;
 }
 @media (min-width: 375px) {
-  ._lao3nn {
+  .hero__lead-wrapper {
     padding-left: 6px !important;
     padding-right: 6px !important;
   }
 }
 @media (min-width: 744px) {
-  ._lao3nn {
+  .hero__lead-wrapper {
     padding-left: 8px !important;
     padding-right: 8px !important;
   }
 }
 @media (min-width: 950px) {
-  ._lao3nn {
+  .hero__lead-wrapper {
     padding-left: 8px !important;
     padding-right: 8px !important;
   }
 }
 @media (min-width: 1128px) {
-  ._lao3nn {
+  .hero__lead-wrapper {
     width: 58.3333% !important;
     padding-left: 8px !important;
     padding-right: 8px !important;
   }
 }
 @media (min-width: 1440px) {
-  ._lao3nn {
+  .hero__lead-wrapper {
     padding-left: 8px !important;
     padding-right: 8px !important;
   }
@@ -68736,21 +68736,21 @@ button[data-testid='cypress-headernav-profile']:focus + .c3i7glo[class][class] {
   }
 }
 /*! ted.css */
-._yl7bo1 {
+.hero__logo {
   margin-bottom: 2rem !important;
   width: 4rem !important;
 }
 @media (min-width: 744px) {
-  ._yl7bo1 {
+  .hero__logo {
     width: 6rem !important;
   }
 }
-._15thk4s {
+.heading__lg {
   font-size: 1.625rem !important;
   line-height: 1.875rem !important;
 }
 @media (min-width: 1128px) {
-  ._15thk4s {
+  .heading__lg {
     font-size: 2rem !important;
     line-height: 2.25rem !important;
   }
@@ -68775,7 +68775,7 @@ button[data-testid='cypress-headernav-profile']:focus + .c3i7glo[class][class] {
     margin-top: 1rem !important;
   }
 }
-._lzotvt {
+.hero__lead {
   color: #222 !important;
   font-family: Circular, '-apple-system', BlinkMacSystemFont, Roboto,
     'Helvetica Neue', 'sans-serif' !important;
@@ -68785,20 +68785,20 @@ button[data-testid='cypress-headernav-profile']:focus + .c3i7glo[class][class] {
   margin-top: 2.5rem !important;
 }
 @media (min-width: 744px) {
-  ._lzotvt {
+  .hero__lead {
     margin-top: 1.5rem !important;
   }
 }
-._y8lhwe {
+.hero__footer {
   margin-top: 2rem !important;
 }
 @media (min-width: 1128px) {
-  ._y8lhwe {
+  .hero__footer {
     margin-top: 4rem !important;
   }
 }
 @media (min-width: 744px) {
-  ._y8lhwe {
+  .hero__footer {
     margin-top: 2.5rem !important;
   }
 }
