Rename new components list-group-action

--- a/assets/css/pages.css
+++ b/assets/css/pages.css
@@ -60086,7 +60086,7 @@ button[data-testid='cypress-headernav-profile']:focus + .c3i7glo[class][class] {
 .a1rgsqn9[class][class] {
   width: 100%;
 }
-._15i50to6 {
+.list-group-action__btn {
   cursor: pointer !important;
   display: inline-block !important;
   margin: 0 !important;
@@ -60119,11 +60119,11 @@ button[data-testid='cypress-headernav-profile']:focus + .c3i7glo[class][class] {
   width: 100% !important;
   text-align: start !important;
 }
-._cy0new {
+.list-group-action__left-icon {
   margin-left: -6px !important;
   margin-right: 16px !important;
 }
-._12s5d6w {
+.list-group-action__right-icon {
   margin-left: 16px !important;
   margin-right: -6px !important;
 }
@@ -61089,7 +61089,7 @@ button[data-testid='cypress-headernav-profile']:focus + .c3i7glo[class][class] {
   color: #fff !important;
   height: 100% !important;
 }
-._jr600v {
+.list-group-action__btn-body {
   -webkit-box-pack: start !important;
   -ms-flex-pack: start !important;
   -webkit-box-align: center !important;
